# NoThanks

./: .gitignore  CMakeLists.txt  README.md
client/: create.html
client/js/: app.js  create.js  definitions.js  directives.js  event.js  websocket.js
client/templates/: player-info.html  player-info.html~  player-score.html
server/: Action.hpp  Card.cpp  Card.hpp  Deck.hpp  Definitions.hpp  Logger.cpp  Logger.hpp  MockGame.cpp  MockGame.hpp  Network.cpp  Network.hpp  NoThanks.cpp  NoThanks.hpp  Parser.cpp  Parser.hpp  Player.cpp  Player.hpp  PlayerAverage.cpp  PlayerAverage.hpp  PlayerHuman.cpp  PlayerHuman.hpp  PlayerRandom.hpp  main.cpp  roadmap  server_ws.hpp
server/players/: Player.cpp  Player.hpp  PlayerHuman.cpp  PlayerHuman.hpp  PlayerRandom.cpp
src/: Action.hpp  Deck.cpp  Deck.hpp  Definitions.hpp  Logger.hpp  NoThanks.cpp  NoThanks.hpp  NoThanks.hpp~  Player.cpp  Player.hpp  PlayerHuman.cpp  PlayerHuman.hpp  PlayerRandom.cpp  main.cpp  main.cpp~
